# board-games

./: Cargo.toml  README.md
client/: btn_down.gd  btn_in.gd  btn_left.gd  btn_mv_select_down.gd  btn_mv_select_left.gd  btn_mv_select_right.gd  btn_mv_select_up.gd  btn_out.gd  btn_right.gd  btn_up.gd  ground.gd  ground.tscn  login.tscn  login_btn.gd  project.godot
gomoku/: Cargo.toml
gomoku/src/: lib.rs
server/: Cargo.toml
server/fake-client/: go.mod  main.go
server/src/: hall.rs  handler.rs  main.rs
