[package]
name = "server"
version = "0.1.0"
authors = ["liyiheng <liyihenggnehiyil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gomoku = { path = "../gomoku" }
actix-rt = "1.1.0"
actix-web = "2.0.0"
serde_json = "1.0.51"
serde = { version = "1.0.106",  features = ["derive"] }
actix-web-actors = "2.0.0"
actix = "0.9.0"
rand = "0.7.3"
